--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.8.9",
     "html-webpack-plugin": "^5.5.3",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "ts-loader": "^9.5.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
@@ -21,5 +23,10 @@
   },
   "dependencies": {
     "rxjs": "^7.8.1"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "util": false
   }
 }
